<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_catch_pkg</name>
  <version>1.0.0</version>
  <description>A ROS2 package for an interactive cat-and-mouse game</description>
  <maintainer email="sy796@cornell.edu">Shiwen Yang</maintainer>
  <license>Apache-2.0</license>

  <!-- Core ROS dependencies -->
  <depend>rclcpp</depend>
  <depend>ros_environment</depend>
  
  <!-- Messages dependencies -->
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>stereo_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <!-- Vision processing dependencies -->
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>libopencv-dev</depend>
  
  <!-- Camera and depth sensing -->
  <depend>camera_info_manager</depend>
  <depend>depthai</depend>
  <depend>depthai_ros_msgs</depend>
  <depend>depthai_bridge</depend>
  <depend>depthai_descriptions</depend>
  
  <!-- Robot control -->
  <depend>rviz_imu_plugin</depend>

  <!-- Execution dependencies -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>depth_image_proc</exec_depend>

  <!-- Testing dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
